# carron

./: .gitignore  Cargo.toml  Dockerfile  HelloWorld  LICENSE  README.md  return_42  riscv-tests.sh  rv32_tests.sh
.github/workflows/: riscv_tests.yml  rust.yml  rv32_tests.yml
src/: .gdb_history  bus.rs  cmdline.rs  cpu.rs  decode.rs  dram.rs  elfload.rs  example_elf  execution.rs  fesvr.rs  lib.rs  log.rs  main.rs  mmu.rs  system.rs
src/bus/: clint.rs  device_tree.rs  dram.rs  mmu.rs  mrom.rs  plic.rs  uart.rs
src/bus/device_tree/: dtb.rs  dts.rs
src/bus/device_tree/dtb/: generate.rs  label.rs  parse.rs  parser.rs  util.rs
src/bus/uart/: io.rs
src/cpu/: breakpoint.rs  csr.rs  csr_name.rs  decode.rs  execution.rs  fetch.rs  instruction.rs  mmu.rs  reg.rs  rv32.rs  rv64.rs  trap.rs
src/cpu/csr/: breakpoint.rs
src/cpu/decode/: decode_inst_16.rs  decode_inst_32.rs  inst_16.rs  inst_32.rs  mmap_parse_16.rs  mmap_parse_32.rs
src/cpu/decode/inst_16/: C_extension.rs  c_extension.rs
src/cpu/execution/: exe_inst_16.rs  exe_inst_32.rs  inst_16.rs  inst_32.rs
src/cpu/mmu/: pmp.rs  tlb.rs
src/cpu/rv32/: csr.rs  execution.rs  fetch.rs  mmu.rs  reg.rs
src/cpu/rv64/: csr.rs  decode.rs  execution.rs  fetch.rs  mmu.rs
src/decode/: mmap_parse_16.rs  mmap_parse_32.rs
src/elfload/: elf_32.rs  elf_64.rs  elf_header.rs  program_header.rs  section_header.rs
src/elfload/elf_32/: elf_header.rs  program_header.rs  section_header.rs
src/elfload/elf_64/: elf_header.rs  program_header.rs  section_header.rs
src/fesvr/: syscall.rs
src/mmu/: bus.rs
(+51 files in other folders)
