[package]
name = "carron"
version = "0.9.5"
authors = ["n.takana <Alignof@outlook.com>"]
edition = "2021"
description = "RV32IMAC emulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[dependencies]
libc = "0.2.132"
memmap = "0.7.0"
once_cell = "1.16.0"
clap = {version = "3.0.5", features=["cargo"]}
